--- a/module.properties
+++ b/module.properties
@@ -1,1 +1,1 @@
-ModuleClass: cpas.@@MODULE_LOWERCASE_NAME@@.@@MODULE_NAME@@Module
+ModuleClass: org.labkey.@@MODULE_LOWERCASE_NAME@@.@@MODULE_NAME@@Module
