--- a/customPlugins/build.gradle
+++ b/customPlugins/build.gradle
@@ -6,6 +6,7 @@ repositories {
 dependencies {
     compile gradleApi()
     compile localGroovy()
+    compile 'org.apache.commons:commons-lang3:3.4'
 //     compile 'org.ajoberstar:grgit:1.6.0'
 //     compile 'org.tmatesoft.svnkit:svnkit:1.8.12'
 }
