--- a/customPlugins/build.gradle
+++ b/customPlugins/build.gradle
@@ -7,4 +7,5 @@ dependencies {
     compile gradleApi()
     compile localGroovy()
     compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'org.apache.commons:commons-io:1.3.2'
 }
