--- a/customPlugins/build.gradle
+++ b/customPlugins/build.gradle
@@ -9,3 +9,52 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.apache.commons:commons-io:1.3.2'
 }
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.1.1"
+    }
+}
+
+apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.artifactory'
+
+project.version = "1.0-SNAPSHOT"
+
+publishing {
+    publications {
+        mavenJava (MavenPublication) {
+            groupId 'org.labkey'
+            artifactId 'customPlugins'
+            from components.java
+        }
+    }
+}
+
+if (project.hasProperty('artifactory_contextUrl') && project.hasProperty('artifactory_user') && project.hasProperty('artifactory_password'))
+{
+    artifactory {
+        contextUrl = "${artifactory_contextUrl}"
+        publish {
+            repository {
+                repoKey = "plugins-snapshot-local"
+                username = "${artifactory_user}"
+                password = "${artifactory_password}"
+                maven = true
+            }
+            defaults {
+                publications ('mavenJava')
+                publishPom = true
+                publishIvy = false
+            }
+        }
+        resolve {
+            repository {
+                repoKey = "plugins-snapshot-local"
+            }
+        }
+    }
+}
