--- a/customPlugins/build.gradle
+++ b/customPlugins/build.gradle
@@ -28,7 +28,7 @@ publishing {
     publications {
         mavenJava (MavenPublication) {
             groupId 'org.labkey'
-            artifactId 'customPlugins'
+            artifactId 'gradlePlugins'
             from components.java
         }
     }
@@ -40,7 +40,7 @@ if (project.hasProperty('artifactory_contextUrl') && project.hasProperty('artifa
         contextUrl = "${artifactory_contextUrl}"
         publish {
             repository {
-                repoKey = "plugins-snapshot-local"
+                repoKey = project.version.endsWith('-SNAPSHOT') ? 'plugins-snapshot-local' : "plugins-release-local"
                 username = "${artifactory_user}"
                 password = "${artifactory_password}"
                 maven = true
@@ -53,7 +53,7 @@ if (project.hasProperty('artifactory_contextUrl') && project.hasProperty('artifa
         }
         resolve {
             repository {
-                repoKey = "plugins-snapshot-local"
+                repoKey = project.version.endsWith('-SNAPSHOT') ? 'plugins-snapshot-local' : "plugins-release-local"
             }
         }
     }
