update package names for build plugins

--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ project.version = "1.0-SNAPSHOT"
 publishing {
     publications {
         mavenJava (MavenPublication) {
-            groupId 'org.labkey'
+            groupId 'org.labkey.build'
             artifactId 'gradlePlugins'
             from components.java
         }
