--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ buildscript {
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.artifactory'
 
-project.version = "1.0-SNAPSHOT"
+project.version = "0.9.3"
 
 publishing {
     publications {
