--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,17 @@ apply plugin: "groovy"
 
 repositories {
     jcenter()
+    maven {
+        url "${artifactory_contextUrl}/libs-release"
+    }
 }
 
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile 'org.apache.commons:commons-lang3:3.4'
-    compile 'org.apache.commons:commons-io:1.3.2'
+    compile "org.apache.commons:commons-lang3:${commonsLang3Version}"
+    compile "org.apache.commons:commons-io:${commonsIoVersion}"
+    compile "com.yahoo.platform.yui:yuicompressor:${yuiCompressorVersion}"
 }
 
 buildscript {
@@ -16,7 +20,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.1.1"
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:${buildInfoExtractorGradleVersion}"
     }
 }
 
