--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ buildscript {
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.artifactory'
 
-project.version = "1.2-SNAPSHOT"
+project.version = "1.2"
 
 publishing {
     publications {
