--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,18 @@ repositories {
     jcenter()
     maven {
         url "${artifactory_contextUrl}/libs-release"
+
+        if (hasProperty('artifactory_user') && hasProperty('artifactory_password'))
+        {
+            credentials {
+                username = artifactory_user
+                password = artifactory_password
+            }
+            authentication {
+                basic(BasicAuthentication)
+                // enable preemptive authentication to get around https://www.jfrog.com/jira/browse/RTFACT-4434
+            }
+        }
     }
 }
 
@@ -45,7 +57,7 @@ if (project.hasProperty('artifactory_contextUrl') && project.hasProperty('artifa
         contextUrl = "${artifactory_contextUrl}"
         publish {
             repository {
-                repoKey = project.version.endsWith('-SNAPSHOT') ? 'plugins-snapshot-local' : "plugins-release-local"
+                repoKey = project.version.endsWith('-SNAPSHOT') ? 'plugins-snapshot-local' : "plugins-release"
                 username = "${artifactory_user}"
                 password = "${artifactory_password}"
                 maven = true
@@ -56,10 +68,10 @@ if (project.hasProperty('artifactory_contextUrl') && project.hasProperty('artifa
                 publishIvy = false
             }
         }
-        resolve {
-            repository {
-                repoKey = project.version.endsWith('-SNAPSHOT') ? 'plugins-snapshot-local' : "plugins-release-local"
-            }
-        }
+//        resolve {
+//            repository {
+//                repoKey = project.version.endsWith('-SNAPSHOT') ? 'plugins-snapshot-local' : "plugins-release"
+//            }
+//        }
     }
 }
