--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ if (project.hasProperty('artifactory_contextUrl') && project.hasProperty('artifa
         contextUrl = "${artifactory_contextUrl}"
         publish {
             repository {
-                repoKey = project.version.endsWith('-SNAPSHOT') ? 'plugins-snapshot-local' : "plugins-release"
+                repoKey = project.version.endsWith('-SNAPSHOT') ? 'plugins-snapshot-local' : "plugins-release-local"
                 username = "${artifactory_user}"
                 password = "${artifactory_password}"
                 maven = true
