--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ buildscript {
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.artifactory'
 
-project.version = "1.2.6"
+project.version = "1.2.7-SNAPSHOT"
 
 publishing {
     publications {
