--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,20 @@ buildscript {
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.artifactory'
 
-project.version = "1.2.7-SNAPSHOT"
+project.version = "1.3-SNAPSHOT"
+
+if (project.file("moduleTemplate").exists())
+{
+    project.task("zipModuleTemplate",
+            type: Zip,
+            {
+                archiveName = "moduleTemplate.zip"
+                from project.file("moduleTemplate")
+                destinationDir = new File("src/main/resources")
+            }
+    )
+    project.tasks.processResources.dependsOn(project.tasks.zipModuleTemplate)
+}
 
 publishing {
     publications {
