Issue 30536: create empty directories that won't migrate to git in zip of moduleTemplate

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import java.nio.file.Paths
+
 apply plugin: "groovy"
 
 repositories {
@@ -43,6 +45,17 @@ project.version = "1.3-SNAPSHOT"
 
 if (project.file("moduleTemplate").exists())
 {
+    // create the empty directories that git does not include
+    String templateDirPath = project.file("moduleTemplate").getPath();
+    File sampleDataDir = Paths.get(templateDirPath, "test/sampledata").toFile();
+    sampleDataDir.mkdirs();
+
+    File moduleApiPackageDir = Paths.get(templateDirPath, "api-src/org/labkey/api/MODULE_DIR_NAME/").toFile();
+    moduleApiPackageDir.mkdirs()
+
+    File webDir = Paths.get(templateDirPath, "resources/web").toFile();
+    webDir.mkdirs()
+
     project.task("zipModuleTemplate",
             type: Zip,
             {
