--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile gradleApi()
     compile localGroovy()
     compile "org.apache.commons:commons-lang3:${commonsLang3Version}"
-    compile "org.apache.commons:commons-io:${commonsIoVersion}"
+    compile "commons-io:commons-io:${commonsIoVersion}"
     compile "com.yahoo.platform.yui:yuicompressor:${yuiCompressorVersion}"
 }
 
