--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ buildscript {
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.artifactory'
 
-project.version = "1.3"
+project.version = "1.3-SNAPSHOT"
 
 if (project.file("moduleTemplate").exists())
 {
