--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ buildscript {
 
 apply plugin: 'maven-publish'
 
-project.version = "1.3.2-SNAPSHOT"
+project.version = "1.3.2"
 
 if (project.file("moduleTemplate").exists())
 {
